class Shape {
    private final String color;
    public Shape(String color) {
        this.color = color;
    }
    
    public String getColor() {
        return color;
    }
    
    public double getArea() {
        return 0;
    }
}